--- a/.vscode/styles.css
+++ b/.vscode/styles.css
@@ -1,19 +1,37 @@
-.cuerpo{
-    background-color: rgb(0, 0, 0);
-}
-.menu{
-    width:auto;    
-    height:100px;
-    background-color: aliceblue;
-}
-
-.logo{
-    width: 98px;
-    height: 100px;
-}
-
-.lista{
-    color: black;
+.slider{
+    width: 90%;
+    height: 900px;
+    margin: auto;
+    overflow: hidden;
+  }
+  .slider ul{
     display: flex;
-    justify-content: center;
-}
+    padding: 0;
+    width: 400%;
+    animation: cambio 20s infinite;
+    animation-direction: alternate;
+  }
+  
+  .slider li{
+    width: 100%;
+    list-style: none;
+  }
+  
+  .slider img{
+    width: 100%;
+  
+  }
+  
+  @keyframes cambio{
+    0%{ margin-left: 0;}
+    20%{margin-left: 0;}
+    
+    25%{margin-left: -100%;}
+    45%{margin-left: -100%;}
+  
+    50%{margin-left: -200%;}
+    70%{margin-left: -200%;}
+  
+    75%{margin-left: -300%;}
+    100%{margin-left: -300%;}
+    }
